2010-12-13
Added phrase-extract-like script, extract.py, for easily extracting/scoreing phrase/scfg/ghkm.
Added alignment tool, cicada_alignment (do we need this?) (TODO: add ITG alignment + threading)
Added matching API, word matcher using lower-case, stemming and wordnet synsets(!) (TODO: use this for TER etc.)
Added wordnet API (we use the standard c-interface wrapped by thread-safe API)
Modified "permute" so that permutation rules are stored in attributes and permute-feature can access and perform scoring.

2010-11-28
Added "attribute" in each hyperedge which can store key-value pair with arbitray value type: 64-bit-int, double float or string.
Cache rule allocation in hypergraph for better memory consumption

2010-11-22
Support tree transduction (but experimental)
Removed bi-rules in hypergraph: removed "yield" in features etc. but added in compositional operations.
Added phrase/synchronous-rule/GHKM-rule extractor + score accumulator
Added tokenizer, and use it for MT evaluators and bleu-related features
Added new API for word normalizer (stemmer or cluster) and use it for sparce features
Added remove-epsilon for lattice
Added linguistic stemmer (snowball and LDC's Arabic stemmer)

2010-10-31
Support phrase-based composition with length-based distortion
and lexicalized-reordering (experimental, and only for monotonic lattice)

2010-10-23
Added ter/wer/per
Added cicada_unite_{hypergraph,lattice,sentence} to perform merging
Added Earley generator with contextual category
Support epsilon in lattice

2010-9-6
Added expected-ngram computer
Added expected-BLEU feature
Added ngram-count-set structure
Moved operation/operation_set into global

2010-8-27
Added cube-growing with order-based coarse heuristic

"Quietly" revised grammar-static structure

2010-8-26
Implemented cube-pruning and cube-growing for faster rescoring

