@@ -187,9 +187,9 @@ namespace cicada
 	      *context_hypothesis += *antecedent_hypothesis;
 	      
 	      if (biter != buffer.end()) {
-		collect_counts(biter, buffer.end(), counts);
 		if (biter_first != biter)
 		  collect_counts(biter_first, biter, buffer.end(), counts);
+		collect_counts(biter, buffer.end(), counts);
 		biter = buffer.end();
 	      }
 	      
@@ -215,9 +215,9 @@ namespace cicada
 	  }
 
 	  if (biter != buffer.end()) {
-	    collect_counts(biter, buffer.end(), counts);
 	    if (biter_first != biter)
 	      collect_counts(biter_first, biter, buffer.end(), counts);
+	    collect_counts(biter, buffer.end(), counts);
 	    biter = buffer.end();
 	  }
 	  
